# Budget-Tracker

./: .env.example  .gitignore  README.md  dev.sh  docker-compose.yml
backend/: .env.example  Dockerfile  docker-compose.yml  manage.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_is_admin_to_users.py  0003_add_account_currency_to_transactions.py
backend/app/: config.py  dependencies.py  main.py
backend/app/db/: base.py  seed.py  session.py
backend/app/jobs/: exchange_rates.py  recurring_transactions.py  scheduler.py  subscription_alerts.py
backend/app/middleware/: auth.py  error_handler.py  logging.py
backend/app/models/: __init__.py  account.py  budget.py  category.py  currency.py  recurring.py  transaction.py  user.py
backend/app/repositories/: account.py  base.py  budget.py  category.py  currency.py  recurring.py  reports.py  transaction.py  user.py
backend/app/routers/: accounts.py  admin.py  auth.py  budgets.py  categories.py  currencies.py  recurring.py  reports.py  transactions.py  users.py
backend/app/schemas/: account.py  auth.py  budget.py  category.py  common.py  currency.py  recurring.py  reports.py  transaction.py  user.py
backend/app/services/: account.py  auth.py  budget.py  category.py  currency.py  recurring.py  reports.py  transaction.py  user.py
backend/app/utils/: currency.py  date_utils.py  pagination.py
backend/tests/: conftest.py
backend/tests/factories/: __init__.py  factories.py
backend/tests/integration/: test_accounts.py  test_accounts_extended.py  test_auth.py  (+9 more)
(+127 files in other folders)
